Updated Build Bash Updated clean-build.sh to delete "ghost" .js files
